{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 21,
  "lineage": "b1031e0f-0446-a2f1-b90c-ef1121370bdd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "website_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e6829e013be2292",
            "arn": "arn:aws:ec2:us-east-1:905663669292:instance/i-0a658352da60f5d60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-ECR-ReadOnly",
            "id": "i-0a658352da60f5d60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "chave-site-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06f3b6849ec2b9ae7"
              }
            ],
            "primary_network_interface_id": "eni-06f3b6849ec2b9ae7",
            "private_dns": "ip-172-31-16-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.213",
            "public_dns": "ec2-98-93-171-62.compute-1.amazonaws.com",
            "public_ip": "98.93.171.62",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b67a561b094bed5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "website-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030a64a9f56b47e7e",
            "tags": {
              "Name": "website-server",
              "Provisioned": "Terraform"
            },
            "tags_all": {
              "Name": "website-server",
              "Provisioned": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0b0b00c92606f4a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "i-0a658352da60f5d60",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "website_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905663669292:security-group/sg-0d0b0b00c92606f4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0b0b00c92606f4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "201.0.33.212/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "website-sg",
            "name_prefix": "",
            "owner_id": "905663669292",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "website-sg",
              "Provisioned": "Terraform"
            },
            "tags_all": {
              "Name": "website-sg",
              "Provisioned": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed5d424efc087d0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "sg-0d0b0b00c92606f4a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905663669292:security-group-rule/sgr-0fa85475b8c14d8bc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fa85475b8c14d8bc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d0b0b00c92606f4a",
            "security_group_rule_id": "sgr-0fa85475b8c14d8bc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "sgr-0fa85475b8c14d8bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905663669292:security-group-rule/sgr-07115ad26997cf1b5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07115ad26997cf1b5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d0b0b00c92606f4a",
            "security_group_rule_id": "sgr-07115ad26997cf1b5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "sgr-07115ad26997cf1b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905663669292:security-group-rule/sgr-0fd316f3692f9ae4c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0fd316f3692f9ae4c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d0b0b00c92606f4a",
            "security_group_rule_id": "sgr-0fd316f3692f9ae4c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "sgr-0fd316f3692f9ae4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905663669292:security-group-rule/sgr-06546d36224da321b",
            "cidr_ipv4": "201.0.33.212/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-06546d36224da321b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d0b0b00c92606f4a",
            "security_group_rule_id": "sgr-06546d36224da321b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905663669292",
            "id": "sgr-06546d36224da321b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website_sg"
          ]
        }
      ]
    }
  ]
}